@@ -1,3 +1,7 @@
+2005-05-06  Per Bothner  <per@bothner.com>
+
+	* ReadTable.java (current): Update ThreadLocation constructor call.
+
 2005-04-18  Per Bothner  <per@bothner.com>
 
 	* ReadTable.java (current): Make non-public.
